Moved and updated text in kopiointi.js, added some simple styling to make it more readable, added more text options to tietosuoja.js, all questions are on the same page; working on a fix for it.

--- a/src/Tehtävät/Kopiointi/Kopiointi.css
+++ b/src/Tehtävät/Kopiointi/Kopiointi.css
@@ -4,4 +4,15 @@ input {
   min-width: 50px;
   min-height: 30px;
   margin: 10px 0 10px 0;
+  text-align: center;
+}
+
+p {
+  margin-top: 5px;
+  margin-bottom: 5px;
+  line-height: 20px;
+}
+
+h2 {
+  margin-top: 20px;
 }
